src/objects/Pro_Services_Enrollment__c.object
<CustomObject>
    <description>Connector that associates a Contact to a PS Offering</description>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>PS_Attendee__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Attendee__c</fullName>
        <description>What event (or Offering) should this individual be associated with?</description>
        <inlineHelpText>What event (or Offering) should this individual be associated with?</inlineHelpText>
        <label>PS Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PS_Attendee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PS_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An offering by the Professional Services team at at specific date or time.</description>
        <inlineHelpText>Select the event (or Offering) this individual will be attending.</inlineHelpText>
        <label>PS Offering</label>
        <referenceTo>Pro_Services_Offering__c</referenceTo>
        <relationshipName>PS_Offering</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the individual with regard to this specific event (or Offering)</description>
        <inlineHelpText>Status of the individual with regard to this specific event (or Offering)</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Viewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <formula>PS_Offering__r.PS_OfferingTargetDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <label>Pro Services Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PS_Attendee__c</columns>
        <columns>Organization__c</columns>
        <columns>PS_Offering__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Attended</fullName>
        <columns>NAME</columns>
        <columns>PS_Attendee__c</columns>
        <columns>Organization__c</columns>
        <columns>PS_Offering__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Attended</value>
        </filters>
        <label>Attended</label>
    </listViews>
    <listViews>
        <fullName>Cancelled</fullName>
        <columns>PS_Attendee__c</columns>
        <columns>Organization__c</columns>
        <columns>PS_Offering__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled/Will Not Attend</value>
        </filters>
        <label>Cancelled</label>
    </listViews>
    <listViews>
        <fullName>No_Shows</fullName>
        <columns>NAME</columns>
        <columns>PS_Attendee__c</columns>
        <columns>Organization__c</columns>
        <columns>PS_Offering__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Registered/Did Not Attend</value>
        </filters>
        <label>No Shows</label>
    </listViews>
    <listViews>
        <fullName>Registered</fullName>
        <columns>NAME</columns>
        <columns>PS_Offering__c</columns>
        <columns>PS_Attendee__c</columns>
        <columns>Organization__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Registered/Will Attend</value>
        </filters>
        <filters>
            <field>Target_Date__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Registered</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}/{0000}</displayFormat>
        <label>Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pro Services Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>